--- a/main.html
+++ b/main.html
@@ -7,8 +7,35 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+<h1 class=h1>Shopping cart</h1>
+<p>The customer is very important, the customer willbe followed by the customer. Now as urn, I haveno right to be in possession of property.
+<p>Summary</p>
+<p>Subtotal $360</p>
+<p>Discount $0</p>	
+<p>Shipping $0</p>	
+<p>Total $360</p>
+<button class=""</button>
+<img src="https://img.freepik.com/free-photo/smartphone-balancing-with-pink-background_23-2150271746.jpg?size=338&ext=jpg&ga=GA1.1.1395880969.1709164800&semt=sph"
+<h2 class=h1>I am very sorry</h2>
+<p> Display: 5 inches</p>	
+<p> RAM: 4GB</p>
+<p> Memory: 32GB</p>
+<button class=" p-3 mb-1 btn btn-outline-success" >Quantity:0</button>
+<p="right">$120</p>	
+<img src="https://img.freepik.com/free-photo/smartphone-balancing-with-pink-background_23-2150271746.jpg?size=338&ext=jpg&ga=GA1.1.1395880969.1709164800&semt=sph"
+<h2 class=h1>I am very sorry</h2>
+<p> Display: 5 inches</p>	
+<p> RAM: 4GB</p>
+<p> Memory: 32GB</p>
+<button class=" p-3 mb-1 btn btn-outline-success" >Quantity:1</button>
+<p="right">$120</p>	
+<img src="https://img.freepik.com/free-photo/smartphone-balancing-with-pink-background_23-2150271746.jpg?size=338&ext=jpg&ga=GA1.1.1395880969.1709164800&semt=sph"
+<h2 class=h1>I am very sorry</h2>
+<p> Display: 5 inches</p>	
+<p> RAM: 4GB</p>
+<p> Memory: 32GB</p>
+<button class=" p-3 mb-1 btn btn-outline-success" >Quantity:1</button>
+<p="right">$120</p>	
 </script>
 
 </body>
