--- a/main.html
+++ b/main.html
@@ -3,12 +3,15 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 
 <body>
-<h1 class=h1>Shopping cart</h1>
-<p>The customer is very important, the customer willbe followed by the customer. Now as urn, I haveno right to be in possession of property.
+	<div class="container bg-light-subtle"> 
+<h4 class="text-center" style="color:#3b99e0">Shopping cart</h4>
+<p class="text-center mt-4">The customer is very important, the customer willbe followed by the customer. Now as urn, I haveno right to be in possession of property.
+
 <p>Summary</p>
 <p>Subtotal $360</p>
 <p>Discount $0</p>	
@@ -36,8 +39,9 @@
 <p> Memory: 32GB</p>
 <button class=" p-3 mb-1 btn btn-outline-success" >Quantity:1</button>
 <p="right">$120</p>	
-</script>
-
+</div>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 
 </html>
